<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">Nanodegree Apps!</string>

    <string name="build_it_bigger_label">Build It Bigger</string>
    <string name="build_it_bigger_appname">Build It Bigger</string>
    <string name="capstone_label">Capstone: My Own App</string>
    <string name="capstone_appname">Capstone</string>
    <string name="library_label">Library App</string>
    <string name="library_appname">Library</string>
    <string name="scores_label">Scores App</string>
    <string name="scores_appname">Scores</string>
    <string name="spotify_streamer_label">Spotify Streamer</string>
    <string name="spotify_streamer_appname">Spotify Streamer</string>
    <string name="xyz_reader_label">XYZ Reader</string>
    <string name="xyz_reader_appname">XYZ Reader</string>

    <string name="error_unhandled_button">"Error: Unhandled button clicked: "</string>
    <string name="app_launch_message">"This button launches the %s app"</string>
</resources>
