<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:text="@string/title"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        style="@style/AppButton.Default"
        android:id="@+id/btnSpotifyStreamer"
        android:text="@string/spotify_streamer_label"
        android:layout_below="@+id/txtTitle"
        android:layout_alignRight="@+id/btnCapstone"
        android:layout_alignEnd="@+id/btnCapstone"
        android:layout_alignLeft="@+id/btnCapstone"
        android:layout_alignStart="@+id/btnCapstone" />

    <Button
        style="@style/AppButton.Default"
        android:id="@+id/btnScores"
        android:text="@string/scores_label"
        android:layout_below="@+id/btnSpotifyStreamer"
        android:layout_alignRight="@+id/btnCapstone"
        android:layout_alignEnd="@+id/btnCapstone"
        android:layout_alignLeft="@+id/btnCapstone"
        android:layout_alignStart="@+id/btnCapstone" />

    <Button
        style="@style/AppButton.Default"
        android:id="@+id/btnLibrary"
        android:text="@string/library_label"
        android:layout_below="@+id/btnScores"
        android:layout_alignRight="@+id/btnCapstone"
        android:layout_alignEnd="@+id/btnCapstone"
        android:layout_alignLeft="@+id/btnCapstone"
        android:layout_alignStart="@+id/btnCapstone" />

    <Button
        style="@style/AppButton.Default"
        android:id="@+id/btnBuildItBigger"
        android:text="@string/build_it_bigger_label"
        android:layout_below="@+id/btnLibrary"
        android:layout_alignRight="@+id/btnCapstone"
        android:layout_alignEnd="@+id/btnCapstone"
        android:layout_alignLeft="@+id/btnCapstone"
        android:layout_alignStart="@+id/btnCapstone" />

    <Button
        style="@style/AppButton.Default"
        android:id="@+id/btnXyzReader"
        android:text="@string/xyz_reader_label"
        android:layout_below="@+id/btnBuildItBigger"
        android:layout_alignRight="@+id/btnCapstone"
        android:layout_alignEnd="@+id/btnCapstone"
        android:layout_alignLeft="@+id/btnCapstone"
        android:layout_alignStart="@+id/btnCapstone" />

    <Button
        style="@style/AppButton.Emphasised"
        android:id="@+id/btnCapstone"
        android:text="@string/capstone_label"
        android:layout_below="@+id/btnXyzReader" />

</RelativeLayout>
